third_party/move/move-compiler-v2/tests/lambda/storable/parse_errors.exp

Diagnostics:
error: unexpected token
   ┌─ tests/lambda/storable/parse_errors.move:10:15
   │
10 │         x.y[3](27)
   │               ^
   │               │
   │               Unexpected '('
   │               Expected ';'
